@@ -249,7 +249,7 @@
     "settings.audio.QSOLogEventFile.label": "通聯日誌記錄通知音頻",
     "settings.audio.warnOnSoundcardsChanged.label": "音訊設備更改時發出警告",
     "settings.audio.devicesChanged.label": "音訊輸出裝置已更改，請檢查您的音訊設定",
-    "settings.audio.deviceDefaultSet.label": "找不到您選擇的音訊輸出設備，正在重設為預設值",
+    "settings.audio.deviceDefaultSet.label": "找不到您選擇的音訊輸出設備",
     "settings.logbook.callsigns.hover": "通聯日誌以僅包含這些呼號的數據（逗號分隔）",
     "settings.logbook.callsigns.label": "過濾通聯呼號",
     "settings.logbook.callsigns.enable": "啟用?",
