@@ -249,7 +249,7 @@
     "settings.audio.QSOLogEventFile.label": "通联日志记录通知音频",
     "settings.audio.warnOnSoundcardsChanged.label": "音频设备更改时发出警告",
     "settings.audio.devicesChanged.label": "音频输出设备已更改，请检查您的音频设置",
-    "settings.audio.deviceDefaultSet.label": "未找到您选择的音频输出设备，正在重置为默认值",
+    "settings.audio.deviceDefaultSet.label": "未找到您选择的音频输出设备",
     "settings.logbook.callsigns.hover": "通联日志以仅包含这些呼号的数据（逗号分隔）",
     "settings.logbook.callsigns.label": "过滤通联呼号",
     "settings.logbook.callsigns.enable": "启用?",
