@@ -248,7 +248,7 @@
   "settings.audio.QSOLogEventFile.label": "Notificación de Evento de Registro del QSO",
   "settings.audio.warnOnSoundcardsChanged.label": "Advertir sobre cambios en el dispositivo de audio",
   "settings.audiodevicesChanged.label": "Se cambiaron los dispositivos de salida de audio, verifique su configuración de audio",
-  "settings.audio.deviceDefaultSet.label": "No se encontró el dispositivo de salida de audio seleccionado, se restablecerá a los valores predeterminados",
+  "settings.audio.deviceDefaultSet.label": "No se encontró el dispositivo de salida de audio seleccionado",
   "settings.logbook.callsigns.hover": "Filtrar QSOs del libro de guardia para incluir solo estos indicativos de llamada (separados por comas)",
   "settings.logbook.callsigns.label": "Indicativo(s) de llamada de trabajo",
   "settings.logbook.callsigns.enable": "¿Habilitar?",
